# weatherstation-epaper

./: .env.example  .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  EMULATOR_INTEGRATION.md  README.md  SECURITY.md  display_config.py  emulator_adapter.py  epaper_emulator.py  fix-pi-zero-readbusy.sh  generate_icons.py  icons.json  install.sh  pi-weather-ink.service  pi_weather_ink.py  pyproject.toml  requirements.txt  translation.json  weatherstation.py  weatherstation.service
.github/workflows/: claude.yml  pylint.yml  python-package.yml  release.yml  test-release.yml
docs/: MANUAL_INSTALL.md  PI_ZERO_READBUSY_FIX.md  TROUBLESHOOTING.md
pi_weather_ink/: __init__.py  display_config.py  emulator_adapter.py  pi_weather_ink.py
tests/: test_display_config.py  test_emulator_integration.py  test_pi_weather_ink.py  test_weatherstation.py
