[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherstation-epaper"
version = "1.3.0"
description = "Raspberry Pi weather station with Waveshare e-Paper displays (multiple models supported)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "python-pirateweather>=1.3",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "spidev>=3.8; platform_system == 'Linux'",
    "gpiozero>=2.0.1; platform_system == 'Linux'",
    "lgpio>=0.2.2.0; platform_system == 'Linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "epaper-emulator @ git+https://github.com/benjaminburzan/E-Paper-Emulator.git",
]

[project.scripts]
weatherstation = "weatherstation:main"

[tool.setuptools]
py-modules = ["weatherstation", "display_config"]

[tool.setuptools.package-data]
"*" = ["icons/icons.json", "icons/weathericons.ttf"]
